overflow issue solve

--- a/Style1.css
+++ b/Style1.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Nunito', sans-serif;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .header{
